objects/Routing_Acknowledgement_No_Response__c.object
<CustomObject>
    <description>Custom Object to fetch Blank Routing Acknowledgement Response</description>
    <fields>
        <fullName>CRM_Payload__c</fullName>
        <description>CRM Payload</description>
        <label>CRM Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_XML_Response__c</fullName>
        <description>CRM XML Response</description>
        <label>CRM XML Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSP_Payload__c</fullName>
        <label>DSP Payload</label>
        <length>90768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSP_Status__c</fullName>
        <label>DSP Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Details_Urban_Science__c</fullName>
        <description>Error Details Urban Science</description>
        <label>Error Details Urban Science</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Walkin_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Walkin Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the Opportunity is processed or not by the batch</description>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_SF_ID__c</fullName>
        <label>Opportunity SF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_DSP__c</fullName>
        <label>Response DSP</label>
        <length>70768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Urban_Science__c</fullName>
        <description>Urban Science Routing Response</description>
        <label>Response Urban Science</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Error__c</fullName>
        <description>Routing Error</description>
        <label>Routing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_DSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to DSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Urban_Science_Status__c</fullName>
        <label>Sent to Urban Science Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Acknowledgement Status Code</description>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Routing Acknowledgement No Response</label>
    <nameField>
        <label>Routing Acknowledgement No Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Acknowledgement No Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>